fixed menu z-index adjusted welcome to fontsize

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -28,7 +28,7 @@ header {
     background: transparent;
     border: none;
     position: relative;
-    z-index: 1;
+    z-index: 3;
     .hamburger {
         color: color(ice-blue);
     }
@@ -46,6 +46,7 @@ header {
     left: 0;
     width: 100%;
     height: 100vh;
+    z-index: 2;
     
     li {
         padding: 5px 0;
@@ -76,7 +77,7 @@ header {
         color: color(marigold);
         font-size: font-size(mindnsoul) * 0.5;
         span {
-            font-size: 4rem;
+            font-size: 2rem;
             font-weight: font-weight(light);
             color: color(ice-blue);
             font-family: font-family(primary);
